--- a/scss/src/foundation/_variables.scss
+++ b/scss/src/foundation/_variables.scss
@@ -91,3 +91,16 @@ $fw_semibold: 600;
 $fw_bold: 700;
 $fw_extrabold: 800;
 $fw_black: 900;
+
+/*=============================================
+=            Breakpoints            =
+=============================================*/
+
+$breakpoints: (
+    md: 48rem,
+    // 768px
+    lg: 64rem,
+    // 1024px
+    xl: 80rem,
+    // 1280px
+);
